# BlueprintAI

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.worker  nixpacks.toml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: audio.py  exports.py  integrations.py  jobs.py  router.py  sops.py  users.py  videos.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audio.py  export.py  job.py  sop.py  user.py  video.py
backend/app/schemas/: __init__.py  audio.py  export.py  job.py  sop.py  user.py  video.py
backend/app/services/: audio_transcriber.py  claude_analyzer.py  google_integration.py  notion_integration.py  pdf_exporter.py
backend/app/utils/: security.py
backend/app/workers/: analysis_tasks.py  audio_tasks.py  celery_app.py  export_tasks.py  video_tasks.py
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/audio/: page.tsx
frontend/src/components/ui/: animations.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  skeleton.tsx  textarea.tsx  theme-toggle.tsx  toaster.tsx
frontend/src/components/video/: MultiSegmentSelector.tsx  VideoSegmentSelector.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
(+10 files in other folders)
